# gallop

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.cpp  config.hpp  discord.cpp  dllmain.cpp  gallop.hpp  gui.cpp  hook.cpp  mdb.cpp
src/hooks/: models.cpp
